{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 95,
  "lineage": "3d7485d8-84b3-153c-cefc-558cf3eb1de7",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:980426627695:internet-gateway/igw-08f58da58cea93949",
            "id": "igw-08f58da58cea93949",
            "owner_id": "980426627695",
            "tags": {
              "Name": "sydney-vpc-igw"
            },
            "tags_all": {
              "Name": "sydney-vpc-igw"
            },
            "vpc_id": "vpc-0955b7a836f14b2a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:980426627695:route-table/rtb-0bb991e2fb76a5fac",
            "id": "rtb-0bb991e2fb76a5fac",
            "owner_id": "980426627695",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sydney-vpc-pri-rt"
            },
            "tags_all": {
              "Name": "sydney-vpc-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0955b7a836f14b2a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:980426627695:route-table/rtb-09918bf9244cbac6b",
            "id": "rtb-09918bf9244cbac6b",
            "owner_id": "980426627695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f58da58cea93949",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sydney-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "sydney-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0955b7a836f14b2a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebb670842fd240f4",
            "route_table_id": "rtb-0bb991e2fb76a5fac",
            "subnet_id": "subnet-0f0b6de57e546b348"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d7d93353c7942d2",
            "route_table_id": "rtb-09918bf9244cbac6b",
            "subnet_id": "subnet-0921f670430198fe4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:980426627695:security-group/sg-046c992b1852e84a6",
            "description": "Public security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046c992b1852e84a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 8,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sydney-vpc-public-sg",
            "name_prefix": "",
            "owner_id": "980426627695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sydney-vpc-public-sg"
            },
            "tags_all": {
              "Name": "sydney-vpc-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0955b7a836f14b2a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:980426627695:subnet/subnet-0f0b6de57e546b348",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0b6de57e546b348",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980426627695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sydney-vpc-priv"
            },
            "tags_all": {
              "Name": "sydney-vpc-priv"
            },
            "vpc_id": "vpc-0955b7a836f14b2a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:980426627695:subnet/subnet-0921f670430198fe4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0921f670430198fe4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980426627695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sydney-vpc-pub"
            },
            "tags_all": {
              "Name": "sydney-vpc-pub"
            },
            "vpc_id": "vpc-0955b7a836f14b2a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:980426627695:vpc/vpc-0955b7a836f14b2a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0f932b77b34c60baf",
            "default_route_table_id": "rtb-095a7cbe77bbeca2c",
            "default_security_group_id": "sg-0e2d0f5c36e71fd0a",
            "dhcp_options_id": "dopt-1d7a097a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0955b7a836f14b2a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095a7cbe77bbeca2c",
            "owner_id": "980426627695",
            "tags": {
              "Name": "sydney-vpc"
            },
            "tags_all": {
              "Name": "sydney-vpc"
            }
          }
        }
      ]
    }
  ]
}